Prevent name from being wrapped

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body {
 .name-job-container .myname {
 	font-size: 1.8em;
 	margin: 0;
+	min-width: 270px;
 }
 
 .name-job-container .myjob {
